Add users CRUD with validations
- Adding users collection
- Adding validations for users CRUD
- Updating reference docs for recipes
- Created reference docs for users
